--- a/config/localization.yaml
+++ b/config/localization.yaml
@@ -20,9 +20,9 @@ slam_toolbox:
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
-    #map_file_name: test_steve
-    # map_start_pose: [0.0, 0.0, 0.0]
-    #map_start_at_dock: true
+    map_file_name: simple_simulation.yaml
+    map_start_pose: [0.0, 0.0, 0.0]
+    # map_start_at_dock: true
 
     debug_logging: false
     throttle_scans: 1
@@ -73,8 +73,8 @@ slam_toolbox:
     minimum_distance_penalty: 0.5
     use_response_expansion: true
 
-map_server:
-  ros__parameters:
-    yaml_filename: "/home/santoshbalaji/haruto_ws/src/haruto_simulation/map/my_map.yaml"
-    topic_name: "map"
-    frame_id: "map"
+# map_server:
+#   ros__parameters:
+#     yaml_filename: "simple_simulation_map.yaml"
+#     topic_name: "map"
+#     frame_id: "map"
